--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Ether to Lamborghini Converter | Hypecoaster.com</title>
+    <title>Bitcoin to Supercar Converter</title>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="http://hypecoaster.com/css/styles.css?6" >
+
+    <link href="style.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
@@ -22,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 no-padding text-center black-bg">
-               <h1 class="green">HYPECOASTER.COM</h1>
+               <h1 class="green">BITCOINSUPERCAR.COM</h1>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -77,4 +78,4 @@ crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="http://hypecoaster.com/js/script.js?6"></script>
 </body>
-</html>
+</html>
